# location-service

./: CMakeLists.txt  README.md
files/sysbus/: location-service.json.prv.in  location-service.service.prv.in  org.webosports.service.location.api.json  org.webosports.service.location.perm.json  org.webosports.service.location.role.json.in  org.webosports.service.location.service.in
files/systemd/: location-service.service
src/: location_common.c  location_common.h  location_getposition.c  location_service.c  location_service.h  main.c
